fix: make main heading fit on small screens
...and give more space to texts on small screens in general.

--- a/theme/styles/section.styl
+++ b/theme/styles/section.styl
@@ -1,8 +1,13 @@
 .section
-  padding-top: 6vh
-  padding-right: 20vw
-  padding-bottom: 12vh
-  padding-left: 20vw
+  padding: 6vh 1rem 12vh 1rem
+
+  @media screen and (min-width: 400px)
+    padding-right: 2rem
+    padding-left: 2rem
+
+  @media screen and (min-width: 762px)
+    padding-right: 20vw
+    padding-left: 20vw
 
 .section img.logo
   vertical-align middle
@@ -34,11 +39,17 @@
   @media(max-width: 1000px)
     background-image: linear-gradient(29deg, var(--darkish-purple-alpha), var(--something-alpha) 85%, var(--ocean-blue-alpha)), url("/images/outsidehof-1000.jpg")
 
+.main-heading
+  font-size: 3rem
+
+  @media screen and (min-width: 762px)
+    font-size: 4.5rem
+
 .hero-image
+  min-height: calc(100vh - 80px);
   background-image: linear-gradient(29deg, var(--darkish-purple-alpha), var(--something-alpha) 85%, var(--ocean-blue-alpha)), url("/images/background-2000.jpg")
   @media(max-width: 1000px)
     background-image: linear-gradient(29deg, var(--darkish-purple-alpha), var(--something-alpha) 85%, var(--ocean-blue-alpha)), url("/images/background-1000.jpg")
-  background-position-y: 15%
 
 .motive-001
   background-image: linear-gradient(29deg, var(--darkish-purple-alpha), var(--something-alpha) 85%, var(--ocean-blue-alpha)), url("/images/everyone.jpg")
